# geonode-rndt

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
rndt/: __init__.py  admin.py  apps.py  context_processors.py  models.py  tests.py  uuidhandler.py  views.py
rndt/api/: urls.py
rndt/catalogue/: urls.py  views.py
rndt/layers/: forms.py  metadata.py  storer.py  urls.py  views.py
rndt/locale/it/LC_MESSAGES/: django.mo  django.po
rndt/locale/it/LC_MESSAGES/rndt/: django.po
rndt/metadata/: handler.py  parser.py  storer.py
rndt/metadata/schemas/: rndt.json
rndt/migrations/: 0001_initial.py  0002_layerrndt.py  0003_layerrndt.py  0004_layerrndt_resolution.py  0005_layerrndt_accuracy.py  0006_layerrndt.py  0007_migrate_metadata.py  0008_delete_layerrndt.py  __init__.py
rndt/static/geonode/js/search/: search.js
rndt/static/rndt/: rndt-metadata.xsl
rndt/static/rndt/js/search/: search.js
rndt/templates/: metadata_detail.html  metadata_form_js.html
rndt/templates/datasets/: dataset_metadata_advanced.html
rndt/templates/layers/: layer_metadata_advanced.html
rndt/templates/layouts/: panels.html
rndt/templates/rndt/: data_constraints_tab.html
rndt/templates/search/: _pa_filter.html  _search_content.html  search_scripts.html
rndt/templates/xml/: template-rndt.xml
rndt/templatetags/: metadata_tags.py  rndt_extra.py
rndt/thesauri/: 3-2-4-2_PriorityDataset.rdf  3-2-4-5_rndt-all1-fixed.rdf  4-1-2-1_SpatialDataServiceCategory_RNDT-fixed.rdf  ConditionsApplyingToAccessAndUse.rdf  LimitationsOnPublicAccess.rdf
templates/: template-rndt.xml
thesauri/: 3-2-4-1_gemet-inspire-themes.rdf  3-2-4-3_SpatialScope.rdf  3.2.4.2_PriorityDataset.rdf  3.2.4.3_SpatialScope.rdf  labels-i18n.rndt.rdf  rndt-all1-fixed.rdf
